--- a/FINAL_1_Vysotskyi/FINAL_1_Vysotskyi.csproj
+++ b/FINAL_1_Vysotskyi/FINAL_1_Vysotskyi.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.15" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
